# gaze_detection

./: .gitignore  .gitmodules  README.md
mediapipe/: test_mp.py
pointing_gesture_recognition/: .to_do.txt.swp  README.md  frames.gv  gaze_detector.py  iris_detector.py  on_sasha.py  one_euro_filter.py  params_realsense.yaml  params_sasha.yaml  pointing_detector.py  start.sh  start_realsense.sh  start_sasha.sh  test_combined_det_dev.py  test_eye_det_dev.py  test_obj_det_dev.py  tf.py  to_do.txt  utils.py
pointing_gesture_recognition/docker/: docker-compose.yml  dockerfile  run_docker.sh
pointing_gesture_recognition/docker/overlay/object_detector_msgs/: CMakeLists.txt
pointing_gesture_recognition/docker_camera/: docker_build.sh  requirements.txt  run_docker.sh
pointing_gesture_recognition/docker_raufbold/: docker-compose.yml  requirements.txt
pointing_gesture_recognition/docker_raufbold/overlay/object_detector_msgs/srv/: estimate_eye_position.srv
pointing_gesture_recognition/docker_robbie/: docker_build.sh  dockerfile  ros.env  run_docker.sh
pointing_gesture_recognition/docker_rosbags/: docker-compose.yaml
realsense_ros_docker/: README.md  docker-compose.yml  dockerfile
